compiler/tests/fixtures/valid/role_optional_slots.viv
// Role with optional slots (min < max) and casting probability

action party:
    roles:
        @host:
            as: initiator
        @guests*:
            as: partner
            n: 1-5 [75%]
