compiler/tests/fixtures/invalid/semantics/sifting_group_action_role_is_with_n.viv
// Group action role with is: and n: (is: requires max == 1)

action foo:
    roles:
        @doer:
            as: initiator


pattern bad:
    roles:
        @p:
            as: character
    actions:
        @acts*:
            is: @p.last_action
            n: 2-5
